--- a/styleagendar.css
+++ b/styleagendar.css
@@ -45,7 +45,7 @@ nav {
 
 #titulo {
     font-family: sans-serif;
-    margin-left: 40%;
+    margin-left: 35%;
     margin-top: 2%;
 }
 
@@ -70,7 +70,7 @@ nav {
     display: block;
   }
   
-  fieldset.agenda .campo {
+  fieldset.campo {
     float: left;
     margin-right: 1em;
   }
@@ -95,21 +95,91 @@ nav {
     padding: 0.2em 0.6em;
     box-shadow: 2px 2px 2px rgba(153, 148, 148, 0.2);
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-    position: absolute;
-    top: 90%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    margin-left: 400px;
+    margin-top: 30px;
+    
+    
   }
   
   .botao:hover {
     background: #ccbbff;
     box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.2);
     text-shadow: none;
+
   }
   
   .button, select {
     cursor: pointer;
+    
   }
+
+  #container2 {
+    height: 550px;
+    margin: 200px;
+    background-color: #ccbbff;
+    border-radius: 10px;
+    margin-top: 5%;
+  }
+
+  .footer-basic {
+    padding:30px 0;
+    background-color:#080808;
+    color:#fbfdff;
+  }
+  
+  .footer-basic ul {
+    padding:0;
+    list-style:none;
+    text-align:center;
+    font-size:18px;
+    line-height:1.6;
+    margin-bottom:0;
+  }
+  
+  .footer-basic li {
+    padding:0 10px;
+  }
+  
+  .footer-basic ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.8;
+  }
+  
+  .footer-basic ul a:hover {
+    opacity:1;
+  }
+  
+  .footer-basic .social {
+    text-align:center;
+    padding-bottom:25px;
+  }
+  
+  .footer-basic .social > a {
+    font-size:24px;
+    width:40px;
+    height:40px;
+    line-height:40px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    border:1px solid rgb(255, 255, 255);
+    margin:0 8px;
+    color:inherit;
+    opacity:0.75;
+  }
+  
+  .footer-basic .social > a:hover {
+    opacity:0.9;
+  }
+  
+  .footer-basic .copyright {
+    margin-top:15px;
+    text-align:center;
+    font-size:13px;
+    color:rgb(255, 255, 255);
+    margin-bottom:0;
+  }
+
   
  
