--- a/style.css
+++ b/style.css
@@ -5,8 +5,14 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background: url(imagem/fundopreto.jpg) no-repeat center center;
+    background-size: cover;
+    height: 92vh;
 }
 
+.nav-text{
+  font-size: clamp(1rem, 2vw, 1rem);
+}
 
 a {
     color: #fff;
@@ -19,37 +25,38 @@ a:hover{
 }
 
 .logo {
-    font-size: 24px;
-    text-transform: uppercase;
-    letter-spacing: 4px;
+  font-size: 24px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
 }
 
 nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background: #23232e;
-    height: 10vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: #23232e;
+  height: 10vh;
 }
 
 .nav-list {
-    list-style: none;
-    display: flex;
+  list-style: none;
+  display: flex;
 }
 
 .nav-list  li {
-    letter-spacing: 3px;
-    margin-left: 32px;
+  letter-spacing: 3px;
+  margin-left: 32px;
 }
 
+
 main {
-    background: url(imagem/fundopreto.jpg) no-repeat center center;
+
     background-size: cover;
-    height: 100vh;
+    height: 92vh;
 }
 
 .footer-basic {
-  padding:30px 0;
+  padding:40px 0;
   background-color:#ffffff;
   color:#4b4c4d;
 }
@@ -108,79 +115,110 @@ main {
   margin-bottom:0;
 }
 
-
 .content {
-  height: 420px;
-  width: 835px;
-  border-radius: 20px;
-  overflow: hidden;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+    height: 500px;
+    width: 700px;
+    border-radius: 20px;
+    overflow: hidden;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    float: left;
+  }
+  
+  .navegation{
+    position:absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translate(-50%);
+    display:flex;
+  }
+  
+  .bar{
+    width: 70px;
+    height: 15px;
+    border: 2px solid #daa520;
+    margin: 6px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.4s;
+  }
+  
+  .bar:hover{
+    background-color: #daa520;
+  }
+  
+  input{
+    display: none;
+  }
+  
+  .slides {
+    display: flex;
+    width: 500%;
+    height: 100%;
+  }
+  
+  .slide {
+    width: 20%;
+    transition: .6s;
+  }
+  
+  .slide img{
+    width: 100%;
+    height: 100%;
+  }
+  
+  #slide1:checked ~ .s1{
+    margin-left: 0;
+  }
+  
+  #slide2:checked ~ .s1{
+    margin-left: -20%
+  }
+  #slide3:checked ~ .s1{
+    margin-left: -40%
+  }
+  
+  #slide4:checked ~ .s1{
+    margin-left: -60%
+  }
+  
+  #slide5:checked ~ .s1{
+    margin-left: -80%
+  }
 
-.navegation{
-  position:absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translate(-50%);
-  display:flex;
-}
+  .card {
+    width: 600px;
+    position: absolute;
+    top: 70%;
+    left: 32%;
+    float: inherit;
+    text-align: center;
+    background-color: #23232e;
+    padding: 2%;
+    border-radius: 60px;
+    color: #FFFFFF;
+  }
 
-.bar{
-  width: 70px;
-  height: 17px;
-  border: 2px solid #daa520;
-  margin: 6px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: 0.4s;
-}
+  .card-button{
+    width: 100px;
+    height: 30px;
+    background-color: #c29608;
+    border:none;
+    color:#e1e1e1;
+    margin: 5px;
+    border-radius: 5px;
+    padding: 1%;
+    display: inline-flex;
+    vertical-align: middle;
+    justify-content: center;
+    align-items: center;
+  }
 
-.bar:hover{
-  background-color: #daa520;
-}
-
-input{
-  display: none;
-}
-
-.slides {
-  display: flex;
-  width: 500%;
-  height: 100%;
-}
-
-.slide {
-  width: 20%;
-  transition: .6s;
-}
-
-.slide img{
-  width: 100%;
-  height: 100%;
-}
-
-#slide1:checked ~ .s1{
-  margin-left: 0;
-}
-
-#slide2:checked ~ .s1{
-  margin-left: -20%
-}
-#slide3:checked ~ .s1{
-  margin-left: -40%
-}
-
-#slide4:checked ~ .s1{
-  margin-left: -60%
-}
-
-#slide5:checked ~ .s1{
-  margin-left: -80%
-}
-
+  .card-text {
+    font-size: clamp(10%, 80%, 100%);
+  }
 
 
 
