--- a/sobre.css
+++ b/sobre.css
@@ -15,6 +15,13 @@ a:hover{
     opacity: 0.7;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background: url(imagem/fundopreto.jpg) no-repeat center center;
+  background-size: cover;
+  height: 92vh;
+}
+
 .logo {
     font-size: 24px;
     text-transform: uppercase;
@@ -43,8 +50,10 @@ nav {
     height: 550px;
     margin: 250px;
     margin-top: 70px;
-    background-color: rgb(172, 221, 240);
+    background-color: #23232e;
     border-radius: 20px;
+    padding: 1%;
+    color: #fff;
 }
 
 
@@ -54,72 +63,73 @@ nav {
     margin-bottom: 15px;
     font-size: 39px;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 .paragrafos{
     font-size: 25px;
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 15px;
+    text-align: justify;
 }
 
   
 .footer-basic {
-    padding:30px 0;
-    background-color:#000000;
-    color:#f5f6f8;
-  }
-  
-  .footer-basic ul {
-    padding:0;
-    list-style:none;
-    text-align:center;
-    font-size:18px;
-    line-height:1.6;
-    margin-bottom:0;
-  }
-  
-  .footer-basic li {
-    padding:0 10px;
-  }
-  
-  .footer-basic ul a {
-    color:inherit;
-    text-decoration:none;
-    opacity:0.8;
-  }
-  
-  .footer-basic ul a:hover {
-    opacity:1;
-  }
-  
-  .footer-basic .social {
-    text-align:center;
-    padding-bottom:25px;
-  }
-  
-  .footer-basic .social > a {
-    font-size:24px;
-    width:40px;
-    height:40px;
-    line-height:40px;
-    display:inline-block;
-    text-align:center;
-    border-radius:50%;
-    border:1px solid rgb(255, 255, 255);
-    margin:0 8px;
-    color:inherit;
-    opacity:0.75;
-  }
-  
-  .footer-basic .social > a:hover {
-    opacity:0.9;
-  }
-  
-  .footer-basic .copyright {
-    margin-top:15px;
-    text-align:center;
-    font-size:13px;
-    color:rgb(253, 253, 253);
-    margin-bottom:0;
-  }
-  
+  padding:40px 0;
+  background-color:#ffffff;
+  color:#4b4c4d;
+}
+
+.footer-basic ul {
+  padding:0;
+  list-style:none;
+  text-align:center;
+  font-size:18px;
+  line-height:1.6;
+  margin-bottom:0;
+}
+
+.footer-basic li {
+  padding:0 10px;
+}
+
+.footer-basic ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.8;
+}
+
+.footer-basic ul a:hover {
+  opacity:1;
+}
+
+.footer-basic .social {
+  text-align:center;
+  padding-bottom:25px;
+}
+
+.footer-basic .social > a {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  border:1px solid #ccc;
+  margin:0 8px;
+  color:inherit;
+  opacity:0.75;
+}
+
+.footer-basic .social > a:hover {
+  opacity:0.9;
+}
+
+.footer-basic .copyright {
+  margin-top:15px;
+  text-align:center;
+  font-size:13px;
+  color:#aaa;
+  margin-bottom:0;
+}
